@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-11T00:38:37Z",
+  "timestamp" : "2024-05-11T08:10:41Z",
   "count_outdated" : 1256,
   "uniques_outdated" : 789,
-  "count" : 1266,
-  "uniques" : 798,
+  "count" : 1267,
+  "uniques" : 799,
   "clones" : [
     {
       "timestamp": "2024-04-28T00:00:00Z",
@@ -49,6 +49,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
