@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 11,
   "uniques": 3,
   "clones": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2024-05-10T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-05-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
