@@ -1,3 +1,12 @@
+2024-05-11T08:10:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9042276358 # 262
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-11
+* notice: last 14d: unq all: 3 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 789 1256 / 798 1266
+* notice: next accum: outdated-unq outdated-all / unq all: 789 1256 / 799 1267
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-11]
+
 2024-05-11T00:38:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9039691307 # 261
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-11
